update with exercises

--- a/Lesson8/index.html
+++ b/Lesson8/index.html
@@ -1,5 +1,3 @@
-"<head><link rel="stylesheet" href="css/style.css" 
-  type="text/css"></head>" :
   <head> 
       <link rel="stylesheet" href="css/style.css" type="text/css"> 
   </head> 
@@ -13,3 +11,4 @@
     <div>7</div>
     <div>8</div>
   </div>  
+  </body>
